--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -13,12 +13,12 @@
 	<body>
 		<a href="/">❰ Home</a>
 
-		<h1>Cancellation</h1>
+		<h1><a id="Cancellation">Cancellation</a></h1>
 		We may cancel events during periods of elevated risk to community health.<br>
 		Cancellations with be published no later than 48 hours before an event starts.<br>
 		Dancers should <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
 
-		<h1>COVID-19</h1>
+		<h1><a id="COVID-19">COVID-19</a></h1>
 		<h2>These rules apply to all dance attendies:</h2>
 		<ul>
 			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We may have some available, but please don't rely on it.</li>
@@ -31,12 +31,12 @@
 			<li>Dancers <b>must notify CommonFloorContraDance@gmail.com if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
 		</ul>
 
-		<h1>Mission</h1>
+		<h1><a id="Mission">Mission</a></h1>
 		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
 		<p>
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
 
-		<h1>Code of Conduct</h1>
+		<h1><a id="CodeOfConduct">Code of Conduct</a></h1>
 		Practice good communication and ask for consent. Be attentive to how your partner dances. Please do:
 		<ul>
 			<li>Invite people to dance and always respect their answers when they say “no.” Do not pressure people.</li>
