--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 		Music by:
 		<ul>
 			<li>John Pranio (fiddle)</li>
-			<li>Bethany Waickman (guitar)</li>
 			<li>Glen Loper (mandolin)</li>
 		</ul>
 		Beginner lesson at 7pm
@@ -33,9 +32,9 @@
 		<p>
 		$10 (cash or venmo)
 		<p>
-		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy)
+		Masks (N95 or similar), vax and boosted (vaccination card will be checked at the door, have it handy)
 		<p>
-		Please review our <a href="/CodeOfConduct">Code of Conduct</a> with which we hope to support a kind, courteous and safe dance community
+		Please review our <a href="/policies">policies</a> with which we hope to support a kind, courteous and safe dance community
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
