--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<p>
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
 		<p>
+		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
+		<p>
 		Calling by:
 		<ul>
 			<li>Hannah Chamberlain</li>
@@ -31,10 +33,6 @@
 		Dance from 7:30 to 10pm
 		<p>
 		$10 (cash or venmo)
-		<p>
-		Masks (N95 or similar), vax and boosted (vaccination card will be checked at the door, have it handy)
-		<p>
-		Please review our <a href="/policies">policies</a> with which we hope to support a kind, courteous and safe dance community
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
