--- a/policies.html
+++ b/policies.html
@@ -16,7 +16,7 @@
 		<h1 id="Cancellation">Cancellation</h1>
 		We may cancel events during periods of elevated risk to community health.<br>
 		Cancellations with be published no later than 48 hours before an event would have started.<br>
-		Dancers should <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
+		Dancers should <b>subscribe</b> to our <a href="mailto:CommonFloorContraDance@gmail.com">mailing list</a> or <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
 
 		<h1 id="COVID-19">COVID-19</h1>
 		<h2>These rules apply to all dance attendies:</h2>
@@ -28,7 +28,7 @@
 			<li>Dancers <b>must not attend if they feel ill in any way</b>, including experiencing any COVID-19 symptoms such as: cough, congestion or runny nose, headache, fatigue, muscle or body aches, fever or chills, loss of smell or taste, diarrhea, nausea or vomiting, and/or shortness of breath or difficulty breathing.</li>
 			<li>Dancers <b>must receive a negative test result before attending if they had COVID-19</b> in the last 14 days (after my 5-day minimum isolation period has ended and all symptoms are gone).</li>
 			<li>Dancers <b>must receive a negative test result before attending if they had close contact with someone with COVID-19</b> in the 14 days before the dance.</li>
-			<li>Dancers <b>must notify CommonFloorContraDance@gmail.com if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
+			<li>Dancers <b>must notify <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
 		</ul>
 
 		<h1 id="Mission">Mission</h1>
