clarify cancelation range

--- a/policies.html
+++ b/policies.html
@@ -14,14 +14,14 @@
 		<a href="/">❰ Home</a>
 
 		<h1 id="Cancellation">Cancellation</h1>
-		We may cancel events during periods of elevated risk to community health.<br>
-		Cancellations with be published no later than 48 hours before an event would have started.<br>
-		Dancers should <b>subscribe</b> to our <a href="mailto:CommonFloorContraDance@gmail.com">mailing list</a> or <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
+		We may cancel events during periods of elevated risk to community health or if our performers/organizers are sick.<br>
+		We will try to decide no later than 48 hours before the event.<br>
+		Dancers should <b>subscribe to our <a href="mailto:CommonFloorContraDance@gmail.com">mailing list</a></b> or <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
 
 		<h1 id="COVID-19">COVID-19</h1>
 		<h2>These rules apply to all dance attendies:</h2>
 		<ul>
-			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We may have some available, but please don't rely on it.</li>
+			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We hope to have some available, but please don't rely on it.</li>
 			<li>Dancers <b>must provide proof of up-to-date vaccination</b> (primary series plus 1 booster, if eligible).</li>
 			<li>Dancers <b>must provide a way to contact them</b> so they can be notified of COVID-19 cases after the dance.</li>
 			<li>Dancers <b>acknowledge and assume risk</b> of contracting or being exposed to COVID-19 at this event. They absolve the dance’s organizers, performers, volunteers, and venue of any liability for contracting or being exposed to COVID-19 at this event.</li>
