--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 		<ul>
 			<li>John Pranio (fiddle)</li>
 			<li>Glen Loper (mandolin)</li>
+			<li>Jamie Oshima (guitar and awesomeness)</li>
+			<li>Toki Oshima (guitar  and awesomeness)</li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
 		$10 (cash or venmo)<br>
 		Bring a water bottle and clean shoes to dance in<br>
-		Did you know you need to wear a maks? Do you know what type? Read through our <a href="/policies">policies</a>!
+		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
