--- a/policies.html
+++ b/policies.html
@@ -19,7 +19,7 @@
 		Dancers should <b>subscribe to our <a href="mailto:CommonFloorContraDance@gmail.com">mailing list</a></b> or <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
 
 		<h1 id="COVID-19">COVID-19</h1>
-		<h2>These rules apply to all dance attendies:</h2>
+		<h2>In an attempt to mitigate the risk of community spread, these rules apply to all dance attendies:</h2>
 		<ul>
 			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We hope to have some available, but please don't rely on it.</li>
 			<li>Dancers <b>must provide proof of up-to-date vaccination</b> (primary series plus 1 booster, if eligible).</li>
@@ -37,6 +37,7 @@
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
 
 		<h1 id="CodeOfConduct">Code of Conduct</h1>
+		Our events are drug and alcohol free, do not arrive intoxicated.<br>
 		Practice good communication and ask for consent. Be attentive to how your partner dances. Please do:
 		<ul>
 			<li>Invite people to dance and always respect their answers when they say “no.” Do not pressure people.</li>
