--- a/policies.html
+++ b/policies.html
@@ -37,10 +37,9 @@
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
 
 		<h1 id="CodeOfConduct">Code of Conduct</h1>
-		Our events are drug and alcohol free, do not arrive intoxicated.<br>
-		Practice good communication and ask for consent. Be attentive to how your partner dances. Please do:
 		<ul>
-			<li>Invite people to dance and always respect their answers when they say “no.” Do not pressure people.</li>
+			<li>Practice good communication and ask for consent. Be attentive to how your partner dances.</li>
+			<li>Invite people to dance and always respect their answers when they say “no.” Do not pressure them.</li>
 			<li>Speak and act with respect. There will be a wide range of experience levels, and people from a variety of backgrounds on the floor.</li>
 			<li>People’s chosen dance role does not reflect their gender expression. If you’re confused on the dance floor, ask them what their dance role is.</li>
 			<li>Check in about dance roles, injuries, and flourishes each time you dance with someone. Ask for consent every time! If someone agrees to something once (twirling, dips, a close embrace) it does not mean they always consent to it.</li>
@@ -50,6 +49,7 @@
 			<li>Give and take feedback gracefully. For example: "Would you like (or May I offer) a dancing tip?"</li>
 			<li>We do not tolerate hate language of any kind, at any time, at our dances.  If you bring it to our dance, you will be escorted out immediately.</li>
 			<li>Systematic or continued unwanted and annoying actions, including threats and demands, will not be tolerated. This can be verbal, physical, or sexual, and none of it is ok.</li>
+			<li>Our events are drug and alcohol free, do not arrive intoxicated.</li>
 		</ul>
 		<p>
 		This a living, breathing document and will change over time. We invite <a href="mailto:CommonFloorContraDance@gmail.com">community input</a> and any changes will be published on this website.
