TBD for june 12

--- a/index.html
+++ b/index.html
@@ -12,41 +12,39 @@
 	</head>
 	<body>
 		<h1>Common Floor Contra Dance</h1>
-		<h2>May 15, 2022</h2>
+		<h2>June 12, 2022</h2>
 		<p>
 		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
 		<p>
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
 		<p>
+		Details TBD
+		<!--<p>
 		Calling by:
 		<ul>
-			<li>Hannah Chamberlain</li>
-			<li>Ellen Hodgkin</li>
+			<li>TBD</li>
 		</ul>
 		Music by:
 		<ul>
-			<li>John Pranio (fiddle)</li>
-			<li>Glen Loper (mandolin)</li>
-			<li>Jamie Oshima (guitar and awesomeness)</li>
-			<li>Toki Oshima (guitar  and awesomeness)</li>
+			<li>TBD</li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
 		$10 (cash or venmo)<br>
 		Bring a water bottle and clean shoes to dance in<br>
-		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
+		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!-->
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
-			<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
+			<!--<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>-->
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
-			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
+			<!--<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>-->
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
-		<embed src="May%2015%20Flyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">
+		<!--<embed src="May%2015%20Flyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">-->
 		<p>
 		Site by Alex, all typos are his.
 		<script>
