Add summer flyer

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
 			<!--<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>-->
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
-			<!--<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>-->
+			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
-		<!--<embed src="May%2015%20Flyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">-->
+		<embed src="SummerFlyer.pdf.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">
 		<p>
 		Site by Alex, all typos are his.
 		<script>
