--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
-		<embed src="SummerFlyer.pdf.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">
+		<embed src="SummerFlyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">
 		<p>
 		Site by Alex, all typos are his.
 		<script>
