Add june 12 details

--- a/index.html
+++ b/index.html
@@ -11,28 +11,26 @@
 		<link rel="canonical" href="http://www.commonfloorcontra.dance" media="screen"/>
 	</head>
 	<body>
+		
+		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
 		<h1>Common Floor Contra Dance</h1>
 		<h2>June 12, 2022</h2>
-		<p>
-		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
-		<p>
-		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
-		<p>
-		Details TBD
-		<!--<p>
+		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
 		Calling by:
 		<ul>
-			<li>TBD</li>
+			<li>Ellen Hodgkin</li>
+			<li>Hannah Chamberlain</li>
 		</ul>
 		Music by:
 		<ul>
-			<li>TBD</li>
+   			<li><a href="https://www.mainefiddlecamp.org/staff/ellen-gawler/">Ellen Gawler</a> <i>on fiddle</i></li>
+			<li>Ben Foss <i>on guitar</i></li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
-		$10 (cash or venmo)<br>
+		$10 to $20 sliding scale (cash or venmo)<br>
 		Bring a water bottle and clean shoes to dance in<br>
-		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!-->
+		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
