--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 		<h1 id="organizers">Organizers</h1>
 		These events have been organized with care by:
         <ul>
-            <li>Alex Hennings - Technology</li>
+			<li>Alex Hennings - Technology</li>
 			<li>Danielle Walczak - Volunteering</li>
 			<li>Ellen Hodgkin - Creativity</li>
 			<li>Hannah Chamberlain - Talent</li>
@@ -26,7 +26,7 @@
         
 		<h1 id="faq">Frequently Asked Questions</h1>
 		<h2><b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?</h2>
-		<h2>Nope, just inspired by it.</h2>
+		<h2><b>A:</b> Nope, just inspired by it.</h2>
 		
 		<footer>
 		<script>
