Add tentative Elsie

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     "name" : "Ellen Gawler"
   }, {
     "@type" : "Person",
+    "name" : "Elsie Gawler"
+  }, {
+    "@type" : "Person",
     "name" : "Ben Foss"
   } ],
   "offers" : {
@@ -61,6 +64,7 @@
 		Music by:
 		<ul>
    			<li>Ellen Gawler <i>on fiddle</i></li>
+			<li>Elsie Gawler <i>on fiddle - (tentative)</i></li>
 			<li>Ben Foss <i>on guitar</i></li>
 		</ul>
 		Beginner lesson at 7pm<br>
