--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="common floor contra dance about">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-		<link rel="canonical" href="http://www.commonfloorcontra.dance/organizers" media="screen"/>
+		<link rel="canonical" href="http://www.commonfloorcontra.dance/about" media="screen"/>
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
@@ -25,8 +25,8 @@
 		</ul>
         
 		<h1 id="faq">Frequently Asked Questions</h1>
-		<h4><b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?</h4>
-		<h4><b>A:</b> Nope, just inspired by it.</h4>
+		<b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?<br>
+		<b>A:</b> Nope, just inspired by it.
 		
 		<footer>
 		<script>
