--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 	<body>
 		
 		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
+		<a href="\about">❱ About</a><br>
+		<a href="\volunteer">❱ Volunteer</a><br>
+		<a href="\policies">❱ Policies</a><br>
 		<h1>Common Floor Contra Dance</h1>
 		<h2>June 12, 2022</h2>
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
@@ -74,7 +77,7 @@
 		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
 		<h2>You can help!</h2>
 		<ul>
-			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
+			<li>To can <a href="/volunteer">volunteer</a></li>
 			<!--<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>-->
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
