--- a/about.html
+++ b/about.html
@@ -24,7 +24,12 @@
 			<li>Samson Fowler - Safety</li>
 		</ul>
         
-		<h1 id="faq">Frequently Asked Questions</h1>
+		<h1 id="mission">Mission</h1>
+		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
+		<p>
+		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
+		
+		<h1 id="faq">Frequently Asked Question(s)</h1>
 		<b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?<br>
 		<b>A:</b> Nope, just inspired by it.
 		
