--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</head>
 	<body>
 		
-		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</b>
+		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</br>
 		<a href="\about">❱ About</a><br>
 		<a href="\volunteer">❱ Volunteer</a><br>
 		<a href="\policies">❱ Policies</a><br>
