--- a/volunteer.html
+++ b/volunteer.html
@@ -18,11 +18,11 @@
 		<p>
 		<h3>Positions:</h3>
 		<ul>
-			<li>Setup 6:30-7 (2 helpers: furniture, fans, signs)</li>
-			<li>Door shift A 6:45-7:45 (4 helpers: check vax/masks/CoC, shoes, money, stamp)</li>
-			<li>Door shift B 7:45-8:30 (2 helpers: same as above)</li>
-			<li>Door shift C 8:30-9:15 (1 helper: same as above)</li>
-			<li>Takedown 10-10:15 (2+ helpers: furniture, fans, signs)</li>
+			<li><b>Setup</b> 6:30-7 (2 helpers: furniture, fans, signs)</li>
+			<li><b>Door shift A</b> 6:45-7:45 (4 helpers: check vax/masks/CoC, shoes, money, stamp)</li>
+			<li><b>Door shift B</b> 7:45-8:30 (2 helpers: same as above)</li>
+			<li><b>Door shift C</b> 8:30-9:15 (1 helper: same as above)</li>
+			<li><b>Takedown</b> 10-10:15 (2+ helpers: furniture, fans, signs)</li>
 		</ul>
 		
 		<footer>
