add facebook event

--- a/index.html
+++ b/index.html
@@ -72,16 +72,15 @@
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
-		$10 to $20 sliding scale (cash or venmo)<br>
+		$10 to $20 sliding scale (cash or <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Dance">venmo<\a>)<br>
 		Bring a water bottle and clean shoes to dance in<br>
-		Did you know you need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
+		Did you know you'll need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
 		<h2>You can help!</h2>
 		<ul>
-			<li>To can <a href="/volunteer">volunteer</a></li>
-			<!--<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>-->
+			<li><a href="/volunteer">Volunteer</a></li>
+			<li>Share our <a href="https://www.facebook.com/events/337716841822224/">facebook event</a></li>
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
-			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
-			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
+			<li>Print this beautiful flyer (below) that Ellen Hodgkin made</li>
 		</ul>
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
