--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
-		$10 to $20 sliding scale (cash or <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Dance">venmo<\a>)<br>
+		$10 to $20 sliding scale (cash or <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Dance">venmo</a>)<br>
 		Bring a water bottle and clean shoes to dance in<br>
 		Did you know you'll need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
 		<h2>You can help!</h2>
