Mention future dances

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print this beautiful flyer (below) that Ellen Hodgkin made</li>
 		</ul>
+		Future dances will be on July 10th and August 28th.
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
