Policies same as may

--- a/policies.html
+++ b/policies.html
@@ -13,6 +13,8 @@
 	<body>
 		<a href="/">❰ Home</a>
 
+		These policies are the same as they were for our May dance.
+		
 		<h1 id="Cancellation">Cancellation</h1>
 		We may cancel events during periods of elevated risk to community health or if our performers/organizers are sick.<br>
 		We will try to decide no later than 48 hours before the event.<br>
