use single quotes

--- a/policies.html
+++ b/policies.html
@@ -53,7 +53,7 @@
 		<p>
 		<footer>
 		<script>
-			document.write("Last <a href"https://github.com/blackboxlogic/CommonFloorContra.Dance/commits/main/policies.html">modified</a> on " + document.lastModified);
+			document.write('Last <a href"https://github.com/blackboxlogic/CommonFloorContra.Dance/commits/main/policies.html">modified</a> on ' + document.lastModified);
 		</script>
 		</footer>
 	</body>
