Specify July Caller

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
 		Calling by:
 		<ul>
-			<li>TBD</li>
+			<li>Liz Nelson</li>
 		</ul>
 		Music by:
 		<ul>
