update for august

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 		<a href="\volunteer">❱ Volunteer</a><br>
 		<a href="\policies">❱ Policies</a><br>
 		<h1>Common Floor Contra Dance</h1>
-		<h2>July 10, 2022</h2>
+		<h2>August 28, 2022</h2>
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
 		Calling by:
 		<ul>
-			<li>Liz Nelson</li>
+			<li>Harris Lapiroff</li>
 		</ul>
 		Music by:
 		<ul>
-   			<li>Glen Loper (and friends TBD)</li>
+   			<li>Ed Howe and Friends</li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
@@ -38,7 +38,6 @@
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print this beautiful flyer (below) that Ellen Hodgkin made</li>
 		</ul>
-		Next dance will be on August 28th.
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
