specify larks/ravens

--- a/about.html
+++ b/about.html
@@ -29,10 +29,13 @@
 		<p>
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
 		
-		<h1 id="faq">Frequently Asked Question(s)</h1>
+		<h1 id="faq">Frequently Asked Questions</h1>
 		<b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?<br>
 		<b>A:</b> Nope, just inspired by it.
-		
+		<p>
+		<b>Q:</b> Which dance role names do we use?<br>
+		<b>A:</b> Larks and Ravens.
+		<p>
 		<footer>
 		<script>
 			document.write("Last modified on " + document.lastModified);
