Confirm second band member

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		</ul>
 		Music by:
 		<ul>
-   			<li>Ed Howe and Friends</li>
+   			<li>Ed Howe</li>
+			<li>Fred White</li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
