Add booking page as demo

--- a/booking.html
+++ b/booking.html
@@ -12,16 +12,16 @@
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
-    <p>
+		<p>
 		<h1 id="organizers">Booking</h1>
-    <p>
-    <!-- from 'Future Booking Public' google drive -->
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vT9chAnOl8Q13a5CepKhMNYXss34U-r2S1Z4auHfTLJ75Cmu-d9uMNCJ65xzPk7LObIYks-e8aMXB0E/pub?embedded=true"></iframe> 
+		<p>
+		<!-- from 'Future Booking Public' google drive -->
+		<iframe src="https://docs.google.com/document/d/e/2PACX-1vT9chAnOl8Q13a5CepKhMNYXss34U-r2S1Z4auHfTLJ75Cmu-d9uMNCJ65xzPk7LObIYks-e8aMXB0E/pub?embedded=true" style="height: 100%; width: 100%;" frameborder="0" scrolling="no">Loading…</iframe>
 		<p>
 		<footer>
-		<script>
-			document.write("Last modified on " + document.lastModified);
-		</script>
+			<script>
+				document.write("Last modified on " + document.lastModified);
+			</script>
 		</footer>
 	</body>
 </html>
