remove header footer

--- a/booking.html
+++ b/booking.html
@@ -11,17 +11,7 @@
 		<link rel="canonical" href="http://www.commonfloorcontra.dance/booking" media="screen"/>
 	</head>
 	<body>
-		<a href="/">❰ Home</a>
-		<p>
-		<h1 id="organizers">Booking</h1>
-		<p>
 		<!-- from 'Future Booking Public' google drive -->
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vT9chAnOl8Q13a5CepKhMNYXss34U-r2S1Z4auHfTLJ75Cmu-d9uMNCJ65xzPk7LObIYks-e8aMXB0E/pub?embedded=true" onload="this.width=window.innerWidth;this.height=window.innerheight;" frameborder="0" scrolling="no">Loading…</iframe>
-		<p>
-		<footer>
-			<script>
-				document.write("Last modified on " + document.lastModified);
-			</script>
-		</footer>
+		<iframe src="https://docs.google.com/document/d/e/2PACX-1vT9chAnOl8Q13a5CepKhMNYXss34U-r2S1Z4auHfTLJ75Cmu-d9uMNCJ65xzPk7LObIYks-e8aMXB0E/pub?embedded=true" onload="this.width=window.innerWidth;this.height=window.innerheight;" frameborder="0">Loading…</iframe>
 	</body>
 </html>
