Update for september details

--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Common Floor Contra Dance</title>
+		<title>Common Floor Contra Dance in Southern Maine</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="common floor contra dance Topsham Maine">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-		<link rel="canonical" href="http://www.commonfloorcontra.dance"/>
+		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
 	</head>
 	<body>
-		<b>IMPORTANT! There are <a href="/policies">requirements for attending our events</a>. PLEASE READ THEM BEFORE ATTENDING EACH EVENT (in case they have changed).</br>
 		<a href="\about">❱ About</a><br>
 		<a href="\volunteer">❱ Volunteer</a><br>
 		<a href="\policies">❱ Policies</a><br>
-		<h1>Common Floor Contra Dance</h1>
-		<h2>August 28, 2022</h2>
+		<h1>Common Floor Contra Dance in Topsham Maine</h1>
+		<h2>Friday, September 9th, 2022</h2>
 		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
 		Calling by:
 		<ul>
-			<li>Harris Lapiroff</li>
+			<li>Maggie Robinson</li>
 		</ul>
 		Music by:
 		<ul>
-   			<li>Ed Howe</li>
-			<li>Fred White</li>
+   			<li>Rose Jackson and friends</li>
 		</ul>
 		Beginner lesson at 7pm<br>
 		Dance from 7:30 to 10pm<br>
 		$10 to $20 sliding scale (cash or <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Dance">venmo</a>)<br>
 		Bring a water bottle and clean shoes to dance in<br>
-		Did you know you'll need to wear a mask? Do you know what type? Read through our <a href="/policies">policies</a>!
+		See our <a href="/policies">policies</a> for covid information
 		<h2>You can help!</h2>
 		<ul>
 			<li><a href="/volunteer">Volunteer</a></li>
-			<li>Share our <a href="https://www.facebook.com/events/564618912056683">facebook event</a></li>
+			<!--li>Share our <a href="https://www.facebook.com/events/564618912056683">facebook event</a></li-->
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
-			<li>Print this beautiful flyer (below) that Ellen Hodgkin made</li>
 		</ul>
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
-		<p>
-		<embed src="SummerFlyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh">
+		<!--embed src="SummerFlyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh"-->
 		<p>
 		Site by Alex, all typos are his.
 		<script>
