--- a/volunteer.html
+++ b/volunteer.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="common floor contra dance volunteer">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-		<link rel="canonical" href="http://www.commonfloorcontra.dance/volunteer" media="screen"/>
+		<link rel="canonical" href="https://www.commonfloorcontra.dance/volunteer" media="screen"/>
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
