Add 'date' to info from volunteers

--- a/volunteer.html
+++ b/volunteer.html
@@ -14,7 +14,7 @@
 		<a href="/">❰ Home</a>
 
 		<h1 id="volunteering">Volunteering</h1>
-		This event can't run without volunteers. Please email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> to volunteer for the dance and <b>indicate which role(s) you're interested in</b>. Volunteering gets you free entry and a warm fuzzy feeling.
+		This event can't run without volunteers. Please email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> to volunteer for the dance and <b>indicate the date you're available and which role(s) you're interested in</b>. Volunteering gets you free entry and a warm fuzzy feeling.
 		<p>
 		<h3>Positions:</h3>
 		<ul>
