--- a/volunteer.html
+++ b/volunteer.html
@@ -14,15 +14,15 @@
 		<a href="/">❰ Home</a>
 
 		<h1 id="volunteering">Volunteering</h1>
-		This event can't run without volunteers. Please email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> to volunteer for the dance and <b>indicate the date you're available and which role(s) you're interested in</b>. Volunteering gets you free entry and a warm fuzzy feeling.
+		This event can't run without volunteers. Please email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> to volunteer for the dance and <b>specify the date and role(s) you're interested in</b>. Volunteering gets you free entry and a warm fuzzy feeling.
 		<p>
 		<h3>Positions:</h3>
 		<ul>
 			<li><b>Setup</b> 6:30-7:00 (2 helpers: furniture, fans, signs)</li>
-			<li><b>Door shift A</b> 6:45-7:45 (4 helpers: check vax/masks/CoC, shoes, money, stamp)</li>
-			<li><b>Door shift B</b> 7:45-8:30 (2 helpers: same as above)</li>
-			<li><b>Door shift C</b> 8:30-9:15 (1 helper: same as above)</li>
-			<li><b>Takedown</b> 10-10:15 (2+ helpers: furniture, fans, signs)</li>
+			<li><b>Door 6:45-7:45</b> (4 helpers: check vax/masks/CoC, shoes, money, stamp)</li>
+			<li><b>Door 7:45-8:30</b> (2 helpers: same as above)</li>
+			<li><b>Door 8:30-9:15</b> (1 helper: same as above)</li>
+			<li><b>Takedown</b> 10:00-10:15 (2+ helpers: furniture, fans, signs)</li>
 		</ul>
 		
 		<footer>
